# foxfire-sniper

./: .gitignore  Cargo.toml  README.md  api.md  build.rs  config.example.toml  dbschema.md
crates/solana_farm_client/: Cargo.toml
crates/solana_farm_client/src/: client.rs  lib.rs  raydium_sdk.rs
crates/solana_farm_client/src/client/: farm_instructions.rs  fund_instructions.rs  pool_instructions.rs  vault_instructions.rs
crates/solana_farm_sdk/: Cargo.toml
crates/solana_farm_sdk/src/: farm.rs  pool.rs
crates/solana_farm_sdk/src/program/: clock.rs  multisig.rs
migrations/2024-05-22-185954_create_prices/: up.sql
migrations/2024-06-11-213344_add_reserve_columns_to_prices/: down.sql  up.sql
migrations/2024-07-28-141226_create_botusers/: down.sql  up.sql
migrations/2024-09-24-214314_create_sniping/: down.sql  up.sql
migrations/2024-09-25-165152_events/: down.sql  up.sql
src/: engine.rs  main.rs  schema.rs
src/aggregators/: every_tick_indicators.rs  indicators_data.rs  mod.rs  period_indicators.rs  tick_bar.rs  tick_indicators_aggregator.rs
src/collectors/: heartbeat_collector.rs  mod.rs  poll_tx_confirmation_collector.rs  prices_heartbeat_streamer.rs  raydium_pool_update_collector.rs  realtime_feed_events_collector.rs
src/collectors/tx_stream/: geyser_feed.rs  mod.rs  tx_stream.rs  types.rs  ws_feed.rs
src/config/: app_context.rs  cache.rs  constants.rs  mod.rs  settings.rs
src/executors/: build_instructions.rs  execute_tx.rs  mod.rs  paper_executor.rs  solana_executor.rs
src/solana/: bloxroute.rs  constants.rs  generic_api.rs  getters.rs  geyser_pool.rs  instructions.rs  mod.rs  pool.rs  rpc_pool.rs  tx_parser.rs  ws_pool.rs
src/storage/: cache.rs  mod.rs  persistent.rs
src/strategies/: events.rs  mod.rs  solana_strategy_manager.rs
src/strategies/deposit/: mod.rs  strategy.rs
src/strategies/logger_interceptor/: mod.rs  strategy.rs
src/strategies/sniper_strategy/: mod.rs  strategy.rs  strategy_state_machine.rs
src/strategies/sniper_strategy/agent/: agent_state_machine.rs
src/strategies/sweeper_strategy/: mod.rs  strategy.rs  strategy_state_machine.rs
src/strategies/volume_strategy/: mod.rs  strategy.rs  strategy_state_machine.rs
src/strategies/volume_strategy/agent/: agent_state_machine.rs  mod.rs
src/tg_bot/: bot_config.rs  init.rs  mod.rs  notifications.rs  sniping_strategy_config_args.rs  state.rs  volume_strategy_config_args.rs
src/tg_bot/helpers/: buttons.rs  formatters.rs  mod.rs  username.rs
src/tg_bot/strategy/: handler.rs
src/tg_bot/user_menu/: command.rs  mod.rs
src/tg_bot/user_menu/strategies/: buttons.rs  handler.rs  mod.rs  screen.rs
src/tg_bot/user_menu/top/: buttons.rs  endpoints.rs  handler.rs  mod.rs  screen.rs
src/types/: bot_user.rs  engine.rs  keys.rs  mod.rs  pool.rs  sniping_strategy.rs  volume_strategy.rs
src/types/actions/: mod.rs  solana_action.rs  solana_swap_action.rs  solana_transfer_action.rs
src/types/events/: events.rs
src/utils/: bloxroute_client.rs  circular_buffer.rs  circular_buffer_w_rev.rs  crypto.rs  decimals.rs  fee_metrics.rs  formatters.rs  helpers.rs  keys.rs  math.rs  mod.rs  percentile.rs  rolling_average.rs  serdealizers.rs  stopwatch.rs
