[package]
name = "solana-bot"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.83"
async-trait = "0.1.80"
crossbeam-channel = "0.5.12"
diesel = { version = "2.1.6", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel-async = { version = "0.5.0", features = ["postgres", "r2d2", "deadpool"] }
diesel_derives = "2.1.6"
r2d2_redis = "0.14.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
futures-util = "0.3.30"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tokio-tungstenite = "0.21.0"
trace = "0.1.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tungstenite = "0.21.0"
url = "2.5.0"
zeroize = { version = "1.3", default-features = false }
solana-client = "1.18.7"
solana-farm-client = { version = "2.0.0-a", path = "crates/solana_farm_client" }
solana-farm-sdk = { version = "0.0.2-a", path = "crates/solana_farm_sdk" }
solana-sdk = "1.18.7"
solana-account-decoder = "1.18.7"
csv = "1.3.0"
redis = "0.25.3"
solana-transaction-status = "=1.18.7"
regex = "1.10.4"
spl-associated-token-account = { version = "=2.3.0", features = ["no-entrypoint"] }
base64 = "0.22.1"
borsh = { version = "=0.9.3" }
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
futures = "0.3.30"
once_cell = "1.19.0"
spinners = "4.1.1"
bincode = "1.3.3"
yata = { version = "0.7.0", features = ["period_type_u32"] }
memo = "0.5.0"
spl-memo = "=4.0.0"
generic-array = "1.0.0"
config = "0.14.0"
serde_derive = "1.0.203"
uuid = { version = "1.9.1", features = ["v4", "serde"] }
rand_distr = "0.4.3"
rand = "0.8.5"
chrono = { version = "0.4.19", features = ["serde"] }
arrayref = "0.3.7"
bytemuck = "1.16.0"
safe-transmute = "0.11.3"
async-stream = "0.3.5"
teloxide = { version = "0.12.2", features = ["macros", "auto-send", "redis-storage", "bincode-serializer", "bincode", "cbor-serializer", "serde_cbor"] }
yellowstone-grpc-proto = { git = "https://github.com/crypt0grapher/yellowstone-grpc", branch = "master" }
yellowstone-grpc-client = { git = "https://github.com/crypt0grapher/yellowstone-grpc", branch = "master" }
maplit = "1.0.2"
lazy_static = "1.5.0"
strum_macros = "0.24.3"
log = "0.4.22"
num-traits = "0.2.19"
statig =  {git = "https://github.com/crypt0grapher/statig", branch = "main", features = ["async"] }
ed25519-dalek = "1.0.1"
hex = "0.4.3"
thiserror = "1.0.63"
lru = "0.12.4"

[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

[package.metadata.cargo-razor]
add-rpath = true

[patch.crates-io]
solana_rbpf ={ git = "https://github.com/crypt0grapher/rbpf", rev = "b503a1867a9cfa13f93b4d99679a17fe219831de" }

