[package]
name = "solana-farm-client"
version = "2.0.0-a"
description = "Solana Farm Client"
authors = ["Solana Maintainers <maintainers@solana.foundation>", "crypt0grapher"]
license = "Apache-2.0"
edition = "2021"

[features]
debug = []

[dependencies]
log = "0.4.16"
arrayvec = "0.7.2"
arrayref = "0.3.6"
serde = "1.0.136"
clap = "4.5.3"
thiserror = "1.0.30"
bs58 = "0.5.1"
solana-client = "1.18.7"
solana-sdk = "1.18.7"
solana-cli-config = "1.18.7"
solana-account-decoder = "=1.18.7"
solana-logger = "1.18.7"
solana-version = "1.18.7"
solana-clap-utils = "1.18.7"
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "=1.0.3", features = ["no-entrypoint"] }
spl-governance = { version = "4.0.0", features = ["no-entrypoint"] }
chrono = "0.4.19"
base64 = "0.22.0"
bincode = "1.3.3"
num_enum = "0.7.2"
pyth-client = "=0.5.0"
zeroize = { version = "1.3", default-features = false }
anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
anchor-spl = "0.29.0"
solana-farm-sdk = {version = "0.0.2-a", path = "../solana_farm_sdk"}
borsh = "0.9.3"
once_cell = "1.19.0"
[lib]
name = "solana_farm_client"
path = "src/lib.rs"