[package]
name = "solana-farm-sdk"
version = "0.0.2-a"
description = "Solana Farm SDK"
authors = ["Solana Maintainers <maintainers@solana.foundation>", "crypt0grapher"]
repository = "https://github.com/solana-labs/solana-program-library/farms"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[features]
debug = []

[dependencies]
solana-program = "1.18.7"
arrayref = "0.3.6"
arraystring = "0.3.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
thiserror = "1.0.30"
num_enum = "0.5.7"
num-traits = "0.2.14"
spl-token-swap = { version = "3.0.0", features = ["no-entrypoint"] }
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "=1.0.3", features = ["no-entrypoint"] }
pyth-client = { version = "=0.5.0", features = ["no-entrypoint"] }
stable-swap-client = "1.8.1"
uint = "0.9.1"
lazy_static = "1.4.0"
ahash = "0.8.11"
#ahash = "0.7"

[build-dependencies]
solana-program = "1.18.7"

[dev-dependencies]
solana-program-test = "1.18.7"


[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

[patch.crates-io.tokio]
git = "https://github.com/solana-labs/solana-tokio.git"
rev = "7cf47705faacf7bf0e43e4131a5377b3291fce21"

[patch.crates-io]
zeroize = { version = "1.3.0" }
anchor-lang = { version = "0.29.0" }